crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operand_custom_operator.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorRight(\"++\", 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected an operand after `(++)`.

Add an expression on the same line or indent it on the next line.
