crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operand_reverse_pipe.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = x <| "
---
nash::syntax

  × Expected an operand after `(<|)`.
   ╭─[src/Main.nash:1:14]
 1 │ value = x <| 
   ·              ─
   ╰────
  help: Add an expression on the same line or indent it on the next line.
