crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operator_dot.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorReserved(BadOperator::Dot, 1, 9), \"value = \")"
---
UNEXPECTED SYMBOL
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 10 } }

Unexpected `.` in expression.

Use a dot directly before a record field name.
