crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operator_has_type.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = 1 : 2"
---
nash::syntax

  × Unexpected `:` in expression.
   ╭─[src/Main.nash:1:11]
 1 │ value = 1 : 2
   ·           ─
   ╰────
  help: Use `::` to prepend a list element; `:` introduces a type annotation.
