crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operator_indent_right.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = 1 +\n2"
---
nash::syntax

  × Expected an operand after `(+)`.
   ╭─[src/Main.nash:2:1]
 1 │ value = 1 +
 2 │ 2
   · ─
   ╰────
  help: Add an expression on the same line or indent it on the next line.
