crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operator_left_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorReserved(BadOperator::LeftArrow, 1, 9), \"value = \")"
---
UNEXPECTED SYMBOL
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 11 } }

Unexpected `<-` in expression.

Use `<-` for a binding inside a do block.
