crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operator_pipe.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorReserved(BadOperator::Pipe, 1, 9), \"value = \")"
---
UNEXPECTED SYMBOL
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 10 } }

Unexpected `|` in expression.

Use `||` for boolean disjunction; `|` belongs in datatype declarations and
record updates.
