crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_bytes_bad_hex.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "crate :: render_plain(& report, & source, \"Main.nash\")"
---
  × Invalid hexadecimal digit in byte string.
   ╭─[Main.nash:1:12]
 1 │ value = #"ag"
   ·            ─
   ╰────
  help: Use digits from `0123456789abcdefABCDEF`.
