crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__parsed_case_wrong_arrow.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = case x of\n    Some width = width"
---
nash::syntax

  × Expected `->` after the pattern.
   ╭─[src/Main.nash:2:16]
 1 │ value = case x of
 2 │     Some width = width
   ·                ─
   ╰────
  help: Separate the pattern and branch body with `->`.
